--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -5,73 +5,81 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
-    height: 65px;
+    padding: 0 40px;
+    height: 60px;
     background: #6269f5;
     font-size: 1.8rem;
     color: #ffffff;
     border-radius: 5px 5px 0 0;
+    & > h4 {
+      color: #fff;
+    }
     .btn_close > img {
-      width: 16px;
-      height: 16px;
+      width: 20px;
+      height: 20px;
       cursor: pointer;
     }
   }
-
-  .modal_form {
-    padding: 40px;
-    height: auto;
-    background: #fff;
-  }
-
-  .modal_button {
-    display: flex;
-    justify-content: center;
-    padding: 20px 28px;
-    background: #eee;
+  .modal_content {
+    background-color: #fff;
+    padding: 40px 20px;
     border-radius: 0 0 5px 5px;
-    button {
-      max-width: 180px;
-    }
   }
 
-  //내부 폼
-  .explanation {
-    font-size: 1.4rem;
-  }
-  .item {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-top: 40px;
-    font-size: 1.4rem;
-    flex-wrap: wrap;
-    & > label {
-      width: 100px;
-    }
-    .item_input {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      width: 100%;
-      max-width: 310px;
-      & > input {
-        padding: 10px 20px;
-        max-width: 310px;
-        width: 100%;
-        height: 38px;
-        border-radius: 5px;
-        border: 1px solid #aaa;
-      }
-      & > p {
-        max-width: 310px;
-        padding: 0px 20px;
-        font-size: 1.2rem;
-        overflow-wrap: anywhere;
-      }
-    }
-  }
+  // .modal_form {
+  //   padding: 40px;
+  //   height: auto;
+  //   background: #fff;
+  // }
+
+  // .modal_button {
+  //   display: flex;
+  //   justify-content: center;
+  //   padding: 20px 28px;
+  //   background: #eee;
+  //   border-radius: 0 0 5px 5px;
+  //   button {
+  //     max-width: 180px;
+  //   }
+  // }
+
+  // //내부 폼
+  // .explanation {
+  //   font-size: 1.4rem;
+  // }
+  // .item {
+  //   display: flex;
+  //   flex-direction: row;
+  //   justify-content: flex-start;
+  //   gap: 10px;
+  //   margin-top: 40px;
+  //   font-size: 1.4rem;
+  //   flex-wrap: wrap;
+  //   & > label {
+  //     width: 100px;
+  //   }
+  //   .item_input {
+  //     display: flex;
+  //     flex-direction: column;
+  //     gap: 4px;
+  //     width: 100%;
+  //     max-width: 310px;
+  //     & > input {
+  //       padding: 10px 20px;
+  //       max-width: 310px;
+  //       width: 100%;
+  //       height: 38px;
+  //       border-radius: 5px;
+  //       border: 1px solid #aaa;
+  //     }
+  //     & > p {
+  //       max-width: 310px;
+  //       padding: 0px 20px;
+  //       font-size: 1.2rem;
+  //       overflow-wrap: anywhere;
+  //     }
+  //   }
+  // }
 }
 
 /* mobile-end */
@@ -83,6 +91,9 @@
         width: 18px;
         height: 18px;
       }
+    }
+    .modal_content {
+      padding: 40px;
     }
 
     .modal_button {
