--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -1,6 +1,9 @@
 @charset "utf-8";
-
+.placeholder_gray::placeholder {
+  color: #aaa;
+}
 .modal_wrap {
+  border-radius: 5px;
   .modal_title {
     display: flex;
     align-items: center;
@@ -11,6 +14,9 @@
     font-size: 1.8rem;
     color: #ffffff;
     border-radius: 5px 5px 0 0;
+    position: sticky;
+    top: -1px;
+    z-index: 1;
     & > h4 {
       color: #fff;
     }
@@ -22,8 +28,24 @@
   }
   .modal_content {
     background-color: #fff;
-    padding: 40px 20px;
     border-radius: 0 0 5px 5px;
+    & > div:nth-of-type(1) {
+      padding: 40px 20px;
+    }
+    .btn_2 {
+      display: flex;
+      justify-content: space-between;
+      background-color: #eee;
+      padding: 20px 40px;
+      border-radius: 0 0 5px 5px;
+      & > button {
+        height: 60px;
+        padding: 0 40px;
+        color: #fafafa;
+        border-radius: 3px;
+        white-space: nowrap;
+      }
+    }
   }
 
   // .modal_form {
@@ -93,7 +115,9 @@
       }
     }
     .modal_content {
-      padding: 40px;
+      & > div:nth-of-type(1) {
+        padding: 40px;
+      }
     }
 
     .modal_button {
