--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -182,6 +182,8 @@ header {
     .logout {
       cursor: pointer;
       width: 45%;
+      white-space: nowrap;
+      line-height: 1.8;
     }
   }
 }
