feat: update css

--- a/src/pages/community/Write.module.scss
+++ b/src/pages/community/Write.module.scss
@@ -107,6 +107,7 @@ select {
 
 @media screen and (min-width: 1280px) {
   .write_wrap {
+    max-width: 1280px;
     .form_wrap {
       .btn_wrap {
         justify-content: center;
