--- a/src/pages/community/View.module.scss
+++ b/src/pages/community/View.module.scss
@@ -244,6 +244,42 @@
                 }
               }
             }
+            .write_child {
+              margin-top: 20px;
+              .form {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                & > img {
+                  width: 28px;
+                  height: 28px;
+                  margin: 0px 10px;
+                }
+                & > input {
+                  padding: 17px 16px;
+                  border: 1px solid #aaa;
+                  border-radius: 3px;
+                }
+                & > input::placeholder {
+                  color: #aaa;
+                }
+                & > button {
+                  height: 60px;
+                  border: 1px solid #aaa;
+                  border-radius: 3px;
+                  color: #6269f5;
+                  background-color: #fafafa;
+                }
+                & > button:hover {
+                  background: #6269f5;
+                  color: #fafafa;
+                }
+              }
+              & > button {
+                display: block;
+                margin: 20px auto 0;
+              }
+            }
           }
         }
       }
