--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -20,6 +20,9 @@
     & > h4 {
       color: #fff;
     }
+    .btn_close {
+      display: flex;
+    }
     .btn_close > img {
       width: 20px;
       height: 20px;
