--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -39,11 +39,11 @@
       display: flex;
       justify-content: space-between;
       background-color: #eee;
-      padding: 20px 40px;
+      padding: 20px;
       border-radius: 0 0 5px 5px;
       & > button {
-        height: 60px;
-        padding: 0 40px;
+        height: 48px;
+        padding: 0 32px;
         color: #fafafa;
         border-radius: 3px;
         white-space: nowrap;
@@ -120,6 +120,13 @@
     .modal_content {
       & > div:nth-of-type(1) {
         padding: 40px;
+      }
+      .btn_2 {
+        padding: 20px 40px;
+        & > button {
+          height: 60px;
+          padding: 0 40px;
+        }
       }
     }
 
