--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -174,6 +174,12 @@ h5,
     font-size: 1.6rem !important;
   }
 }
+.mo_show {
+  display: block;
+}
+.tab_show {
+  display: none;
+}
 
 /* 테블릿 768 사이즈 반응형 */
 @media screen and (min-width: 768px) {
@@ -216,6 +222,12 @@ h5,
     .placeholder {
       font-size: 1.8rem !important;
     }
+  }
+  .mo_show {
+    display: none;
+  }
+  .tab_show {
+    display: block;
   }
 }
 
