--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -106,6 +106,7 @@
         text-align: center;
       }
       .notice_content {
+        width: 100%;
         .info {
           display: flex;
           flex-direction: row;
@@ -122,6 +123,10 @@
         & > h5 {
           margin-top: 12px;
           margin-bottom: 4px;
+          cursor: pointer;
+        }
+        & > h5:hover {
+          color: #6269f5;
         }
         .content {
           display: -webkit-box;
@@ -145,6 +150,65 @@
           }
         }
       }
+    }
+    .post_list {
+      .post_item {
+        padding: 20px 2px;
+        border-bottom: 1px solid #d9d9d9;
+        .post_content {
+          .info {
+            display: flex;
+            flex-direction: row;
+            gap: 8px;
+            align-items: center;
+            & > img:nth-of-type(1) {
+              width: 18px;
+            }
+            & > span {
+              display: flex;
+              align-items: center;
+            }
+          }
+          & > h5 {
+            margin-top: 12px;
+            margin-bottom: 4px;
+          }
+          .content {
+            display: -webkit-box;
+            -webkit-line-clamp: 2; /* Webkit 기반 브라우저용 */
+            line-clamp: 2; /* 표준 속성 */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          .reaction {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            gap: 10px;
+            & > span {
+              display: flex;
+              align-items: center;
+              & > img {
+                margin-right: 4px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .pagination {
+    margin-top: 120px;
+    display: flex;
+    justify-content: center;
+    & > div {
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      color: #888;
+      cursor: pointer;
     }
   }
 }
@@ -201,6 +265,18 @@
           .info {
             & > img:nth-of-type(1) {
               width: 26px;
+            }
+          }
+        }
+      }
+      .post_list {
+        .post_item {
+          padding: 20px;
+          .post_content {
+            .info {
+              & > img:nth-of-type(1) {
+                width: 26px;
+              }
             }
           }
         }
