--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -169,6 +169,7 @@ h5,
   z-index: 5 !important;
 }
 .toastui-editor-contents {
+  font-size: 1.6rem !important;
   .placeholder {
     color: #aaa !important;
     font-size: 1.6rem !important;
@@ -219,6 +220,7 @@ h5,
     font-size: 1.6rem;
   }
   .toastui-editor-contents {
+    font-size: 1.6rem !important;
     .placeholder {
       font-size: 1.8rem !important;
     }
