feat: commu main

--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -15,6 +15,7 @@
         & > h5:nth-of-type(1) {
           color: #aaa;
           margin-right: 8px;
+          cursor: pointer;
         }
       }
       .post_topic {
