--- a/src/pages/community/Community.module.scss
+++ b/src/pages/community/Community.module.scss
@@ -15,6 +15,7 @@
         flex-direction: column;
         border: 1px solid #d9d9d9;
         border-radius: 5px;
+        background-color: #fff;
         padding: 20px;
         height: 407px;
         overflow: hidden;
@@ -55,8 +56,13 @@
   .content_wrap {
     padding: 0 10%;
     margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+    margin-bottom: 100px;
     .free_wrap,
     .question_wrap {
+      flex-grow: 1;
       .header {
         display: flex;
         flex-direction: row;
@@ -92,6 +98,10 @@
             text-wrap: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            cursor: pointer;
+          }
+          .title:hover {
+            color: #6269f5;
           }
         }
       }
@@ -104,6 +114,7 @@
 
 @media screen and (min-width: 768px) {
   .wrap {
+    margin: 80px auto;
     width: 86%;
     .banner {
       padding: 0;
@@ -129,5 +140,9 @@
 @media screen and (min-width: 1280px) {
   .wrap {
     max-width: 1280px;
+    .content_wrap {
+      flex-direction: row;
+      gap: 20px;
+    }
   }
 }
