--- a/src/pages/review/Detail.module.scss
+++ b/src/pages/review/Detail.module.scss
@@ -26,7 +26,6 @@
       display: flex;
       flex-direction: row;
       & > div {
-        width: 130px;
         height: 40px;
         line-height: 22px;
         padding: 8px 20px;
@@ -270,8 +269,9 @@
           .score_list {
             .score_item {
               flex-direction: row;
+              align-items: center;
               & > h5 {
-                width: 94px;
+                width: 110px;
                 border-right: 1px solid #d9d9d9;
               }
               .score_score {
