--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -48,13 +48,19 @@
       }
       & > div {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         gap: 20px;
         .btn_to_write {
-          width: 60px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex: 1;
+          max-width: 215px;
+          width: 50%;
           height: 60px;
           background-color: #6269f5;
-          border-radius: 5px;
+          color: #fff;
+          border-radius: 3px;
           img {
             width: 20px;
           }
@@ -62,7 +68,7 @@
         .btn_search {
           flex: 1;
           height: 60px;
-          max-width: 156px;
+          max-width: 214px;
           border: 1px solid #aaa;
           border-radius: 3px;
           color: #6269f5;
@@ -126,9 +132,6 @@
           margin-bottom: 4px;
           cursor: pointer;
         }
-        & > h5:hover {
-          color: #6269f5;
-        }
         .content {
           display: -webkit-box;
           -webkit-line-clamp: 2; /* Webkit 기반 브라우저용 */
@@ -174,9 +177,6 @@
             margin-top: 12px;
             margin-bottom: 4px;
             cursor: pointer;
-          }
-          & > h5:hover {
-            color: #6269f5;
           }
           .content {
             display: -webkit-box;
@@ -242,6 +242,9 @@
           margin: 0;
         }
         & > div {
+          .btn_to_write {
+            width: 142px;
+          }
           .btn_search {
             width: 111px;
           }
