--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -139,6 +139,7 @@
           -webkit-box-orient: vertical;
           overflow: hidden;
           text-overflow: ellipsis;
+          cursor: pointer;
         }
         .reaction {
           display: flex;
@@ -160,6 +161,10 @@
         padding: 20px 2px;
         border-bottom: 1px solid #d9d9d9;
         .post_content {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
           .info {
             display: flex;
             flex-direction: row;
@@ -185,6 +190,7 @@
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
+            cursor: pointer;
           }
           .reaction {
             display: flex;
@@ -267,7 +273,8 @@
         border-radius: 5px 5px 0 0;
         border-bottom: 1px solid #d9d9d9;
         .label {
-          min-width: 120px;
+          width: unset;
+          min-width: 93px;
         }
         .notice_content {
           .info {
@@ -280,6 +287,60 @@
       .post_list {
         .post_item {
           padding: 20px;
+          .post_item_wrap {
+            display: flex;
+            flex-direction: row;
+            align-items: stretch;
+            gap: 20px;
+            .question_reply {
+              min-width: 93px;
+              cursor: pointer;
+              .cnt_zero {
+                display: flex;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                & > h2 {
+                  flex: 1;
+                  text-align: center;
+                  color: #aaa;
+                }
+              }
+              .cnt {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+                & > div:nth-of-type(1) {
+                  padding: 6px 0;
+                  width: 100%;
+                  text-align: center;
+                  border-bottom: 1px solid #d9d9d9;
+                }
+                & > div:nth-of-type(2) {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  width: 100%;
+                  flex: 1;
+                  margin-top: 6px;
+                  & > h2 {
+                    color: #aaa;
+                  }
+                }
+              }
+              .accepted {
+                border: 2px solid #6269f5;
+                border-radius: 5px;
+                & > div:nth-of-type(2) {
+                  & > h2 {
+                    color: #6269f5;
+                  }
+                }
+              }
+            }
+          }
           .post_content {
             .info {
               & > img:nth-of-type(1) {
@@ -296,5 +357,39 @@
 @media screen and (min-width: 1280px) {
   .wrap {
     max-width: 1280px;
+    .content_wrap {
+      .notice {
+        gap: 40px;
+        padding: 20px 40px;
+        .label {
+          min-width: 135px;
+        }
+      }
+      .post_list {
+        .post_item {
+          padding: 20px 40px;
+          height: 177px;
+          .post_item_wrap {
+            gap: 40px;
+            height: 100%;
+            .question_reply {
+              min-width: 135px;
+              .cnt_zero {
+                & > h2 {
+                  & > br {
+                    display: none;
+                  }
+                }
+              }
+              .cnt {
+                & > div:nth-of-type(2) {
+                  margin-top: 8px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
