--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -1,12 +1,14 @@
 @charset "utf-8";
 
 .wrap {
-  margin: 40px auto;
+  margin: 0 auto 100px;
   .header {
-    padding: 0 10%;
+    padding: 40px 10% 15px;
+    position: sticky;
+    top: -30px;
+    background: #fafafa;
     .topic_wrap {
       width: fit-content;
-      margin: 0 auto;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -35,7 +37,6 @@
       flex-direction: column;
       gap: 20px;
       & > input {
-        margin: 0 auto;
         width: 100%;
         max-width: 449px;
         padding: 0 16px;
@@ -48,30 +49,28 @@
       }
       & > div {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         gap: 20px;
         .btn_to_write {
           display: flex;
           justify-content: center;
           align-items: center;
-          flex: 1;
-          max-width: 215px;
-          width: 50%;
           height: 60px;
           background-color: #6269f5;
           color: #fff;
           border-radius: 3px;
+          padding: 0 21px;
           img {
             width: 20px;
+            margin-right: 8px;
           }
         }
         .btn_search {
-          flex: 1;
           height: 60px;
-          max-width: 214px;
           border: 1px solid #aaa;
           border-radius: 3px;
           color: #6269f5;
+          padding: 0 32px;
         }
         .btn_search:hover {
           border: 1px solid #6269f5;
@@ -82,7 +81,7 @@
       }
     }
     .sort_wrap {
-      margin-top: 40px;
+      margin-top: 20px;
       display: flex;
       justify-content: end;
       gap: 20px;
@@ -131,7 +130,6 @@
     }
   }
   .content_wrap {
-    margin-top: 15px;
     padding: 0 10%;
     .notice {
       display: flex;
@@ -198,8 +196,27 @@
         border-bottom: 1px solid #d9d9d9;
         display: flex;
         gap: 20px;
-        & > input {
-          width: 18px;
+        .for_admin {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 30px;
+          gap: 10px;
+          .wb {
+            width: 100%;
+            text-align: center;
+            background-color: #6269f5;
+            color: #fff;
+          }
+          .post_id {
+            width: 100%;
+            text-align: center;
+          }
+          & > input {
+            width: 100%;
+            height: 15px;
+          }
         }
         .post_item_wrap {
           flex: 1;
@@ -266,6 +283,9 @@
       cursor: pointer;
     }
   }
+  .qna_reaction {
+    display: flex !important;
+  }
 }
 /* main end */
 /* mobile-end */
@@ -274,8 +294,10 @@
   .wrap {
     width: 86%;
     .header {
-      padding: 0;
+      padding: 80px 0 10px;
       .topic_wrap {
+        width: 100%;
+        justify-content: center;
         flex-direction: row;
         align-items: center;
         gap: 40px;
@@ -293,7 +315,7 @@
         }
         & > div {
           .btn_to_write {
-            width: 142px;
+            width: 152px;
           }
           .btn_search {
             width: 111px;
@@ -301,14 +323,13 @@
         }
       }
       .sort_wrap {
-        margin-top: 60px;
+        margin-top: 40px;
         & > select {
           width: 120px;
         }
       }
     }
     .content_wrap {
-      margin-top: 10px;
       padding: 0;
       .notice {
         flex-direction: row;
@@ -397,7 +418,13 @@
     }
   }
 }
-
+@media screen and (min-width: 1024px) {
+  .wrap {
+    .qna_reaction {
+      display: none !important;
+    }
+  }
+}
 @media screen and (min-width: 1280px) {
   .wrap {
     max-width: 1280px;
