--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -38,7 +38,7 @@
       gap: 20px;
       & > input {
         width: 100%;
-        max-width: 449px;
+        max-width: 720px;
         padding: 0 16px;
         height: 60px;
         border: 1px solid #aaa;
@@ -420,6 +420,9 @@
 }
 @media screen and (min-width: 1024px) {
   .wrap {
+    .header {
+      border-bottom: 1px solid #d9d9d9;
+    }
     .qna_reaction {
       display: none !important;
     }
