--- a/src/components/comments/Comments.module.scss
+++ b/src/components/comments/Comments.module.scss
@@ -13,10 +13,10 @@
     }
     & > div > div {
       padding: 17px 16px;
-      min-height: 60px;
+      min-height: 48px;
     }
     & > button {
-      min-height: 60px;
+      min-height: 48px;
       border: 1px solid #aaa;
       border-radius: 3px;
       color: #6269f5;
@@ -162,7 +162,7 @@
             margin: 0px 10px;
           }
           & > button {
-            min-height: 60px;
+            min-height: 48px;
             border: 1px solid #aaa;
             border-radius: 3px;
             color: #6269f5;
@@ -190,8 +190,12 @@
     .comment_write {
       flex-direction: row;
       align-items: center;
+      & > div > div {
+        min-height: 60px;
+      }
       & > button {
         min-width: 110px;
+        min-height: 60px;
         align-self: stretch;
       }
     }
@@ -205,6 +209,7 @@
             align-items: center;
             & > button {
               min-width: 110px;
+              min-height: 60px;
               align-self: stretch;
             }
           }
